main.css
* {
	box-sizing: border-box;
}

body {
	padding: 0;
	margin: 0;
	width: 1440px;
	max-width: 100%;
}

div#container {
	display: grid;
	grid-template-columns: repeat(12, 1fr);
	grid-template-rows: repeat(5, minmax(0, auto));
}

#container nav {
	grid-column: 2/13;
	grid-row: 1/2;
	display: grid;
	grid-template-columns: repeat(12, 1fr);
}

#container h3 {
	grid-column: 1/4;
	grid-row: 1/2;
	margin: 0;
	padding: 0;
}

#container ul.nav {
	grid-column: 10/13;
	grid-row: 1/2;
	padding: 0;
	margin: 0;
}

#container ul.nav li {
	list-style-type: none;
	display: inline-block;
	margin-right: 20px;
}

main {
	grid-column: 2/13;
	grid-row: 2/3;
	display: grid;
	grid-template-columns: repeat(12, 1fr);
}

main #leftMain {
	grid-column: 1/7;
	display: grid;
	grid-gap: 5px;
	grid-template-rows: repeat(3, minmax(0, auto));
}

main #leftMain h3 {
	grid-column: 1/12;
}

main #leftMain p {
	grid-column: 1/12;
}

main #leftMain input {
	grid-column: 1/8;
}

main #leftMain button {
	grid-column: 8/12;
}

main #rightMain {
	grid-column: 8/13;
}

main #rightMain img {
	width: 400px;
}

section.firstSec {
	grid-column: 2/13;
	grid-row: 3/4;
	display: grid;
	grid-template-columns: repeat(12, 1fr);
	grid-template-rows: repeat(5, minmax(0, auto));
}

section.firstSec .leftArticle {
	grid-column: 1/7;
	display: grid;
	grid-template-columns: repeat(12, 1fr);
	grid-template-rows: repeat(2, minmax(0, auto));
}

section.firstSec .leftArticle #productive {
	grid-column: 1/12;
	grid-row: 1/2;
}

section.firstSec .leftArticle #testimony {
	grid-column: 1/8;
	grid-row: 2/3;
	background-color: white;
	border-radius: 10px;
	box-shadow: 3px 3px 5px rgba(39, 36, 36, 0.514);
	padding: 5px;
	display: block;
}

section.firstSec .leftArticle #testimony p {
	text-align: justify;
	padding: 3px;
}

section.firstSec .leftArticle #testimony .kyle {
	display: grid;
	grid-template-columns: repeat(12, 1fr);
	grid-template-rows: repeat(2, minmax(0, auto));
}

section.firstSec .leftArticle #testimony .kyle b {
	grid-column: 1/4;
	grid-row: 1/3;
}

section.firstSec .leftArticle #testimony .kyle h4 {
	grid-column: 5/9;
	grid-row: 1/2;
}

section.firstSec .leftArticle #testimony .kyle small {
	grid-column: 5/9;
	grid-row: 2/3;
}

section.firstSec .rightArticle {
	grid-column: 8/13;
}

section.firstSec .rightArticle img {
	width: 400px;
}

section.secondSec {
	grid-column: 2/13;
	grid-row: 4/5;
	display: grid;
	grid-template-columns: repeat(12, 1fr);
	grid-template-rows: repeat(3, minmax(0, auto));
}

section.secondSec .earlyAccess {
	grid-column: 1/7;
}

section.secondSec .getStarted {
	grid-column: 9/13;
}

footer {
	grid-row: 5/6;
	grid-column: 2/13;
}

